apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_ant_ffi_fn_method_derivedsecretkey_public_key(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_derivedsecretkey_sign(void*_Nonnull ptr, RustBuffer msg, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_graphentry(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_graphentry(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_graphentry_new(void*_Nonnull owner, RustBuffer parents, RustBuffer content, RustBuffer descendants, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_graphentry_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentry_content(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentry_descendants(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentry_parents(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_graphentryaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_graphentryaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_graphentryaddress_new(void*_Nonnull public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentryaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_mainpubkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_mainpubkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);