dart/ant_ffi/lib/src/native/bindings.dart


  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_method_derivedsecretkey_public_key(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_derivedsecretkey_public_key(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_derivedsecretkey_public_keyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_derivedsecretkey_public_key');
  late final _uniffi_ant_ffi_fn_method_derivedsecretkey_public_key =
      _uniffi_ant_ffi_fn_method_derivedsecretkey_public_keyPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_method_derivedsecretkey_sign(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer msg,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_derivedsecretkey_sign(
      ptr,
      msg,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_derivedsecretkey_signPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, RustBuffer,
                  ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_derivedsecretkey_sign');
  late final _uniffi_ant_ffi_fn_method_derivedsecretkey_sign =
      _uniffi_ant_ffi_fn_method_derivedsecretkey_signPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, RustBuffer,
              ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_graphentry(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_graphentry(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_graphentryPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_graphentry');
  late final _uniffi_ant_ffi_fn_clone_graphentry =
      _uniffi_ant_ffi_fn_clone_graphentryPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_graphentry(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_graphentry(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_graphentryPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_graphentry');
  late final _uniffi_ant_ffi_fn_free_graphentry =
      _uniffi_ant_ffi_fn_free_graphentryPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_graphentry_new(
    ffi.Pointer<ffi.Void> owner,
    RustBuffer parents,
    RustBuffer content,
    RustBuffer descendants,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_graphentry_new(
      owner,
      parents,
      content,
      descendants,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_graphentry_newPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, RustBuffer,
                  RustBuffer, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_graphentry_new');
  late final _uniffi_ant_ffi_fn_constructor_graphentry_new =
      _uniffi_ant_ffi_fn_constructor_graphentry_newPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_method_graphentry_address(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_graphentry_address(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_graphentry_addressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_graphentry_address');
  late final _uniffi_ant_ffi_fn_method_graphentry_address =
      _uniffi_ant_ffi_fn_method_graphentry_addressPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_graphentry_content(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_graphentry_content(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_graphentry_contentPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_graphentry_content');
  late final _uniffi_ant_ffi_fn_method_graphentry_content =
      _uniffi_ant_ffi_fn_method_graphentry_contentPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_graphentry_descendants(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_graphentry_descendants(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_graphentry_descendantsPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_graphentry_descendants');
  late final _uniffi_ant_ffi_fn_method_graphentry_descendants =
      _uniffi_ant_ffi_fn_method_graphentry_descendantsPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_graphentry_parents(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_graphentry_parents(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_graphentry_parentsPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_graphentry_parents');
  late final _uniffi_ant_ffi_fn_method_graphentry_parents =
      _uniffi_ant_ffi_fn_method_graphentry_parentsPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_graphentryaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_graphentryaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_graphentryaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_graphentryaddress');
  late final _uniffi_ant_ffi_fn_clone_graphentryaddress =
      _uniffi_ant_ffi_fn_clone_graphentryaddressPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_graphentryaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_graphentryaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_graphentryaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_graphentryaddress');
  late final _uniffi_ant_ffi_fn_free_graphentryaddress =
      _uniffi_ant_ffi_fn_free_graphentryaddressPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void>
      uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hex(
    RustBuffer hex,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hex(
      hex,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hexPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Pointer<ffi.Void> Function(
                      RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hex');
  late final _uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hex =
      _uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_graphentryaddress_new(
    ffi.Pointer<ffi.Void> public_key,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_graphentryaddress_new(
      public_key,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_graphentryaddress_newPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_graphentryaddress_new');
  late final _uniffi_ant_ffi_fn_constructor_graphentryaddress_new =
      _uniffi_ant_ffi_fn_constructor_graphentryaddress_newPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_graphentryaddress_to_hex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_graphentryaddress_to_hex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_graphentryaddress_to_hexPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_graphentryaddress_to_hex');
  late final _uniffi_ant_ffi_fn_method_graphentryaddress_to_hex =
      _uniffi_ant_ffi_fn_method_graphentryaddress_to_hexPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_mainpubkey(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_mainpubkey(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_mainpubkeyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_mainpubkey');
  late final _uniffi_ant_ffi_fn_clone_mainpubkey =
      _uniffi_ant_ffi_fn_clone_mainpubkeyPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_mainpubkey(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_mainpubkey(
      ptr,
      out_status,
    );
  }
